src/tests/integration/snapshots/zellij__tests__integration__terminal_window_resize__window_width_and_height_decrease_with_one_pane.snap
---
source: src/tests/integration/terminal_window_resize.rs
expression: snapshot_before_quit

---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                                                                                          
line16-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                               
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                                                                                          
line17-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                               
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                                                                                          
line18-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                               
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                                                                                          
line19-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                               
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                                                                                          
prompt $ █                                                                                                               
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
